# ER-converter

./: .gitignore  CMakeLists.txt  README.md  gui-main.cpp  main.cpp
.github/workflows/: github-actions.yml
include/: Entity.h  Errors.h  Model.h  Relationship.h  hello.h
include/Entity/: Entity.h
include/Errors/: Errors.h
include/base/: Entity.h  Errors.h  Graph.h  IDManager.h  Model.h  Relationship.h  ScriptGenerator.h
include/cli/: CLIApp.h  Command.h  ConsoleMessage.h  DefaultHandler.h  Handler.h
include/gui/: GUIDummy.h
src/: Entity.cpp  Errors.cpp  Model.cpp  Relationship.cpp  hello.cpp
src/base/: Entity.cpp  Errors.cpp  Model.cpp  Relationship.cpp  ScriptGenerator.cpp
src/cli/: CLIApp.cpp  Command.cpp  ConsoleMessage.cpp  DefaultHandler.cpp
src/gui/: GUIDummy.cpp
tests/: entity-test.cpp  er-model-test.cpp  graph-test.cpp  relationship-test.cpp  script-generator-test.cpp  test.cpp  test1.txt  test2.txt  test3.txt  test_main.txt
